@@ -2,7 +2,6 @@ package com.soundboard.soundboard.audio;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
 
-import java.util.Collections;
 import java.util.Set;
 
 @ConfigurationProperties(prefix = "app.audio-storage")
@@ -10,7 +9,12 @@ public record AudioStorageProperties(
         String basePath,
         Set<String> allowedMimeTypes
 ) {
-    public Set<String> getAllowedMimeTypes() {
-        return Collections.unmodifiableSet(allowedMimeTypes);
+    public AudioStorageProperties {
+        allowedMimeTypes = allowedMimeTypes == null ? Set.of() : Set.copyOf(allowedMimeTypes);
+    }
+
+    @Override
+    public Set<String> allowedMimeTypes() {
+        return Set.copyOf(allowedMimeTypes);
     }
 }
